# rssbot.rs

./: .gitignore  .pre-commit-config.yaml  .rust-analyzer.json  Cargo.toml  README.md  rssfeeds.json  wrangler.toml
src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  utils.rs
src/handlers/: main.rs  test.rs
src/utils/: hypr.rs  rss_feeds.rs
