[package]
name = "rssbot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net"] }
hyper = { version = "1.4", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
bytes = "1"
anyhow = "1"
rss = "2.0"
serde_json = "1.0"
dotenv = "0.15" 
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.104", features = ["derive"] }

[features]
default = []
server = []
